{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 293,
  "lineage": "e28f8107-f9f5-2f13-24f2-f5d4c653e4d0",
  "resources": [
    {
      "module": "module.ec2_us_east_2",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:588459062833:vpc/vpc-03690dda91a6dba5f",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-061664d23a64512dc",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-04523dbfd9cde0a80",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03690dda91a6dba5f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d30155f1efb9fa95",
            "owner_id": "588459062833"
          }
        }
      ]
    },
    {
      "module": "module.ec2_us_east_2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "websrv_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec4a4f48963e367b",
            "domain": "vpc",
            "id": "eipalloc-0ec4a4f48963e367b",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-130-141-114.us-east-2.compute.amazonaws.com",
            "public_ip": "3.130.141.114",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ec2_us_east_2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "websrv_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09f85f3aaae282910",
            "arn": "arn:aws:ec2:us-east-2:588459062833:instance/i-0f8a699a4cc36aac8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f8a699a4cc36aac8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0281acd53e812b82d",
            "private_dns": "ip-172-31-30-77.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.30.77",
            "public_dns": "ec2-18-117-135-84.us-east-2.compute.amazonaws.com",
            "public_ip": "18.117.135.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dd4f05ad3499e6de",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "websrvsg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-010c04e1b994c1bc3",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-049ca20246c1e7dd0"
            ]
          },
          "dependencies": [
            "module.ec2_us_east_2.aws_security_group.web_srv_sg",
            "module.ec2_us_east_2.data.aws_ami.latest_amzn2_ami",
            "module.ec2_us_east_2.data.aws_subnets.subnets",
            "module.ec2_us_east_2.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_us_east_2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_srv_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:588459062833:security-group/sg-049ca20246c1e7dd0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049ca20246c1e7dd0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "websrvsg",
            "name_prefix": "",
            "owner_id": "588459062833",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03690dda91a6dba5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_us_east_2.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_us_west_2",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:588459062833:vpc/vpc-0cb2111f1f25fcaf6",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00115a7b18412ea76",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0c0e025f84a6abd56",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cb2111f1f25fcaf6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-069717ae46ac6c159",
            "owner_id": "588459062833"
          }
        }
      ]
    },
    {
      "module": "module.ec2_us_west_2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "websrv_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024e33fc023c71b76",
            "domain": "vpc",
            "id": "eipalloc-024e33fc023c71b76",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-68-60-156.us-west-2.compute.amazonaws.com",
            "public_ip": "54.68.60.156",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ec2_us_west_2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "websrv_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c0d141edc4f470cc",
            "arn": "arn:aws:ec2:us-west-2:588459062833:instance/i-08ee0a43737eb0472",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ee0a43737eb0472",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d60f3dfc7c0b09f9",
            "private_dns": "ip-172-31-44-169.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.44.169",
            "public_dns": "ec2-35-93-73-161.us-west-2.compute.amazonaws.com",
            "public_ip": "35.93.73.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0646a6553838d1137",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "websrvsg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0745a0ba2ed468356",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-064eb0e75e6312f42"
            ]
          },
          "dependencies": [
            "module.ec2_us_west_2.aws_security_group.web_srv_sg",
            "module.ec2_us_west_2.data.aws_ami.latest_amzn2_ami",
            "module.ec2_us_west_2.data.aws_subnets.subnets",
            "module.ec2_us_west_2.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_us_west_2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_srv_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:588459062833:security-group/sg-064eb0e75e6312f42",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064eb0e75e6312f42",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "websrvsg",
            "name_prefix": "",
            "owner_id": "588459062833",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cb2111f1f25fcaf6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_us_west_2.data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}